9-pkg-old/blender-2.79-git/0-ERREUR-Compil-AVEC-OIIO.2.0.3.TXT
/build/blender-git/src/blender/intern/cycles/graph/node_xml.cpp: In function ‘void ccl::xml_read_node(ccl::XMLReader&, ccl::Node*, OpenImageIO_v2_0::pugi::xml_node)’:
/build/blender-git/src/blender/intern/cycles/graph/node_xml.cpp:253:11: error: could not convert ‘node->ccl::Node::name’ from ‘OpenImageIO_v2_0::ustring’ to ‘bool’
  if(node->name)
     ~~~~~~^~~~
make[2]: *** [intern/cycles/graph/CMakeFiles/cycles_graph.dir/build.make:89: intern/cycles/graph/CMakeFiles/cycles_graph.dir/node_xml.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1440: intern/cycles/graph/CMakeFiles/cycles_graph.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....


make: *** [Makefile:163: all] Error 2
==> ERROR: A failure occurred in build().
    Aborting...
